# mLib

./: CMakeLists.txt  README.md
include/: mLibCommon.cpp  mLibCommon.h  mLibCore.cpp  mLibCore.h  mLibDepthCamera.h  mLibFreeImage.h  mLibLodePNG.h
include/core-base/: baseImage.h  binaryGrid3.h  common.h
include/core-graphics/: boundingBox3.h
include/core-math/: eigenSolver.h  matrix2x2.h  matrix3x3.h  matrix4x4.h
include/core-util/: colorGradient.h  eventMap.h  sparseGrid3.h  utility.h
src/: mLib.cmake.in
src/core-graphics/: RGBColor.cpp
src/core-math/: triangleIntersection.cpp
src/core-util/: directory.cpp  eventMap.cpp  timer.cpp  utility.cpp
src/ext-lodepng/: lodepng.cpp
